--- a/help/lojaintegrada/whatsapp.html
+++ b/help/lojaintegrada/whatsapp.html
@@ -46,7 +46,7 @@
     7) Entre em contato conosco via Whatsapp para informar o pagamento
     <br />
     <br />
-    <a href="https://wa.me/5511961039840?text=Pagamento+via+QRCode" target="_blank">Clique aqui para falar conosco via whatsapp</a>
+    <a href="mailto:contato@tribol.com.br" class="btn fancy-btn fancy-dark" target="_blank">Clique aqui para entrar em contato!</a>
     <br />
     <br />
     <br />
