--- a/loja_bkp.html
+++ b/loja_bkp.html
@@ -143,7 +143,7 @@
                     </table>
                     <p style="color:gray">Realize o pagamento usando o QRCode acima e entre em contato no Whatsapp para receber seu código!</p>
                     <center>
-                        <a href="https://wa.me/5511961039840" class="btn fancy-btn fancy-dark" target="_blank">Clique aqui para falar no whatsapp!</a>
+                        <a href="mailto:contato@tribol.com.br" class="btn fancy-btn fancy-dark" target="_blank">Clique aqui para entrar em contato!</a>
                     </center>
                 </div>
                 <div class="modal-footer">
