--- a/description/BSXLFN5QQZSC.html
+++ b/description/BSXLFN5QQZSC.html
@@ -24,7 +24,7 @@ INFORMAÇÕES SOBRE O PRODUTO<br>
 - É um código de 25 dígitos único, exclusivo, nunca utilizado, que vai lhe dá o direito de resgatar o Jogo via Download;<br>
 - Após o resgate você pode instalar/desinstalar/reinstalar/jogar quantas vezes quiser e quando quiser;<br>
 - É um produto digital não é um disco físico, ou seja, não existe envio por correios;<br>
-- Quando finalizar o pagamento entre em contato via whatsapp com informações para confirmação do pagamento e recebimento do código do seu jogo;<br>
+- Quando finalizar o pagamento entre em contato via email com informações para confirmação do pagamento e recebimento do código do seu jogo;<br>
 - Após resgatar o Jogo ele fica registrado permanentemente em sua conta, não poderá ser transferido para outra pessoa;<br>
 - É preciso ter uma conta microsoft previamente criada e internet para fazer o resgate e download do Jogo;<br>
 - O Serviço da Xbox Live precisa estar ativo no momento do resgate, consulte antes;<br>
