--- a/help/lojaintegrada/whatsapp.html
+++ b/help/lojaintegrada/whatsapp.html
@@ -43,7 +43,7 @@
     6) Anote o código da operação.
     <br />
     <br />
-    7) Entre em contato conosco via Whatsapp para informar o pagamento
+    7) Entre em contato conosco via email para informar o pagamento
     <br />
     <br />
     <a href="mailto:contato@tribol.com.br" class="btn fancy-btn fancy-dark" target="_blank">Clique aqui para entrar em contato!</a>
