--- a/loja.html
+++ b/loja.html
@@ -138,7 +138,7 @@
                             </td>
                         </tr>
                     </table>
-                    <p style="color:gray">Realize o pagamento usando o QRCode acima e entre em contato no Whatsapp para receber seu código!</p>
+                    <p style="color:gray">Realize o pagamento usando o QRCode acima e entre em contato conosco para receber seu código!</p>
                     <center>
                         <a href="mailto:contato@tribol.com.br" class="btn fancy-btn fancy-dark" target="_blank">Clique aqui para entrar em contato!</a>
                     </center>
